# TelescopeHeater

./: README
case/: cap.scad  cap.stl  common.inc  connector.scad  connector.stl  ecke.scad  ecke.stl  foot.scad  foot.stl  heater-body.scad  heater-body.stl  heater-cap.scad  heater-cap.stl  kabel.scad  kabel.stl
firmware/: AUTHORS  ChangeLog  Makefile.am  README  adc.c  adc.h  heater.c  pwm.c  pwm.h  timer.c  timer.h
hardware/: Makefile  fp-lib-table  telescopeheater-cache.lib  telescopeheater.kicad_pcb  telescopeheater.net  telescopeheater.pro  telescopeheater.sch  telescopeheater.xml
hardware/heater.pretty/: Cermet.kicad_mod  ISP.kicad_mod  Power.kicad_mod  RC-5231.kicad_mod  SOT-23-IRLM.kicad_mod
